add building information for sbt